Implement progressive loading of PDFs

--- a/test/test_slave.html
+++ b/test/test_slave.html
@@ -19,6 +19,9 @@ limitations under the License.
   <head>
     <title>pdf.js test slave</title>
     <style type="text/css"></style>
+    <script type="text/javascript" src="/src/network.js"></script>
+    <script type="text/javascript" src="/src/chunked_stream.js"></script>
+    <script type="text/javascript" src="/src/pdf_manager.js"></script>
     <script type="text/javascript" src="/src/core.js"></script>
     <script type="text/javascript" src="/src/util.js"></script>
     <script type="text/javascript" src="/src/api.js"></script>
