--- a/examples/acroforms/index.html
+++ b/examples/acroforms/index.html
@@ -4,6 +4,9 @@
 <head>
   <!-- In production, only one script (pdf.js) is necessary -->
   <!-- In production, change the content of PDFJS.workerSrc below -->
+  <script type="text/javascript" src="../../src/network.js"></script>
+  <script type="text/javascript" src="../../src/chunked_stream.js"></script>
+  <script type="text/javascript" src="../../src/pdf_manager.js"></script>
   <script type="text/javascript" src="../../src/core.js"></script>
   <script type="text/javascript" src="../../src/util.js"></script>
   <script type="text/javascript" src="../../src/api.js"></script>
