--- a/test/font/font_test.html
+++ b/test/font/font_test.html
@@ -12,6 +12,9 @@
   <script type="text/javascript" src="fontutils.js"></script>
 
   <!-- include source files here... -->
+  <script type="text/javascript" src="../../src/network.js"></script>
+  <script type="text/javascript" src="../../src/chunked_stream.js"></script>
+  <script type="text/javascript" src="../../src/pdf_manager.js"></script>
   <script type="text/javascript" src="../../src/core.js"></script>
   <script type="text/javascript" src="../../src/api.js"></script>
   <script type="text/javascript" src="../../src/util.js"></script>
