Make spacebar work on document load - fixes bug 864619

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -76,7 +76,7 @@ limitations under the License.
     <script type="text/javascript" src="viewer.js"></script>
   </head>
 
-  <body>
+  <body tabindex="1">
     <div id="outerContainer" class="loadingInProgress">
 
       <div id="sidebarContainer">
@@ -212,7 +212,7 @@ limitations under the License.
                     data-l10n-id="page_rotate_cw" ></menuitem>
         </menu>
 
-        <div id="viewerContainer" tabindex="1">
+        <div id="viewerContainer">
           <div id="viewer" contextmenu="viewerContextMenu"></div>
         </div>
 
