Fix disabling of zoom buttons and add camel case button names

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -166,11 +166,11 @@ limitations under the License.
               <div class="outerCenter">
                 <div class="innerCenter" id="toolbarViewerMiddle">
                   <div class="splitToolbarButton">
-                    <button class="toolbarButton zoomOut" id="zoom_out" title="Zoom Out" tabindex="9" data-l10n-id="zoom_out">
+                    <button id="zoomOut" class="toolbarButton zoomOut" title="Zoom Out" tabindex="9" data-l10n-id="zoom_out">
                       <span data-l10n-id="zoom_out_label">Zoom Out</span>
                     </button>
                     <div class="splitToolbarButtonSeparator"></div>
-                    <button class="toolbarButton zoomIn" id="zoom_in" title="Zoom In" tabindex="10" data-l10n-id="zoom_in">
+                    <button id="zoomIn" class="toolbarButton zoomIn" title="Zoom In" tabindex="10" data-l10n-id="zoom_in">
                       <span data-l10n-id="zoom_in_label">Zoom In</span>
                      </button>
                   </div>
@@ -202,13 +202,13 @@ limitations under the License.
         </div>
 
         <menu type="context" id="viewerContextMenu">
-          <menuitem label="First Page" id="first_page"
+          <menuitem id="firstPage" label="First Page"
                     data-l10n-id="first_page" ></menuitem>
-          <menuitem label="Last Page" id="last_page"
+          <menuitem id="lastPage" label="Last Page"
                     data-l10n-id="last_page" ></menuitem>
-          <menuitem label="Rotate Counter-Clockwise" id="page_rotate_ccw"
+          <menuitem id="pageRotateCcw" label="Rotate Counter-Clockwise"
                     data-l10n-id="page_rotate_ccw" ></menuitem>
-          <menuitem label="Rotate Clockwise" id="page_rotate_cw"
+          <menuitem id="pageRotateCw" label="Rotate Clockwise"
                     data-l10n-id="page_rotate_cw" ></menuitem>
         </menu>
 
