--- a/web/viewer.html
+++ b/web/viewer.html
@@ -222,7 +222,7 @@ limitations under the License.
                     data-l10n-id="page_rotate_cw" ></menuitem>
         </menu>
 
-        <div id="viewerContainer">
+        <div id="viewerContainer" tabindex="0">
           <div id="viewer" contextmenu="viewerContextMenu"></div>
         </div>
 
