--- a/web/viewer.html
+++ b/web/viewer.html
@@ -18,6 +18,9 @@ limitations under the License.
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<!--#if GENERIC || CHROME-->
+    <meta name="google" content="notranslate">
+<!--#endif-->
     <title>PDF.js viewer</title>
 
 <!--#if FIREFOX || MOZCENTRAL-->
