Move PDFHistory from viewer.js to its own file

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -83,6 +83,7 @@ limitations under the License.
     <script type="text/javascript" src="text_layer_builder.js"></script>
     <script type="text/javascript" src="pdf_find_bar.js"></script>
     <script type="text/javascript" src="pdf_find_controller.js"></script>
+    <script type="text/javascript" src="pdf_history.js"></script>
 <!--#endif-->
 
     <script type="text/javascript" src="debugger.js"></script>
