--- a/web/viewer.html
+++ b/web/viewer.html
@@ -80,6 +80,7 @@ limitations under the License.
 <!--#if !PRODUCTION-->
     <script type="text/javascript" src="ui_utils.js"></script>
     <script type="text/javascript" src="download_manager.js"></script>
+    <script type="text/javascript" src="thumbnail_view.js"></script>
     <script type="text/javascript" src="text_layer_builder.js"></script>
     <script type="text/javascript" src="pdf_find_bar.js"></script>
     <script type="text/javascript" src="pdf_find_controller.js"></script>
