--- a/extensions/chromium/pdfHandler.html
+++ b/extensions/chromium/pdfHandler.html
@@ -16,3 +16,4 @@ limitations under the License.
 -->
 <script src="chrome.tabs.executeScriptInFrame.js"></script>
 <script src="pdfHandler.js"></script>
+<script src="extension-router.js"></script>
