Move Presentation Mode related code from viewer.js to its own file

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -68,6 +68,7 @@ limitations under the License.
     <script type="text/javascript" src="pdf_history.js"></script>
     <script type="text/javascript" src="secondary_toolbar.js"></script>
     <script type="text/javascript" src="password_prompt.js"></script>
+    <script type="text/javascript" src="presentation_mode.js"></script>
 <!--#endif-->
 
     <script type="text/javascript" src="debugger.js"></script>
