--- a/web/viewer.html
+++ b/web/viewer.html
@@ -60,6 +60,7 @@ limitations under the License.
 <!--#if !PRODUCTION-->
     <script type="text/javascript" src="ui_utils.js"></script>
     <script type="text/javascript" src="download_manager.js"></script>
+    <script type="text/javascript" src="settings.js"></script>
     <script type="text/javascript" src="page_view.js"></script>
     <script type="text/javascript" src="thumbnail_view.js"></script>
     <script type="text/javascript" src="text_layer_builder.js"></script>
