--- a/extensions/chromium/pageActionPopup.html
+++ b/extensions/chromium/pageActionPopup.html
@@ -14,7 +14,9 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
+<html>
 <head>
+<meta charset="utf-8">
 <title></title>
 <style>
 html {
