--- a/web/viewer.html
+++ b/web/viewer.html
@@ -73,6 +73,7 @@ http://sourceforge.net/adobe/cmap/wiki/License/
     <script type="text/javascript" src="page_view.js"></script>
     <script type="text/javascript" src="thumbnail_view.js"></script>
     <script type="text/javascript" src="text_layer_builder.js"></script>
+    <script type="text/javascript" src="document_outline_view.js"></script>
     <script type="text/javascript" src="pdf_find_bar.js"></script>
     <script type="text/javascript" src="pdf_find_controller.js"></script>
     <script type="text/javascript" src="pdf_history.js"></script>
