Refactor the CSS rules for the overlayContainer

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -321,8 +321,8 @@ http://sourceforge.net/adobe/cmap/wiki/License/
       </div> <!-- mainContainer -->
 
       <div id="overlayContainer" class="hidden">
-        <div id="promptContainer" class="hidden">
-          <div id="passwordContainer" class="prompt doorHanger">
+        <div id="passwordOverlay" class="container hidden">
+          <div class="dialog">
             <div class="row">
               <p id="passwordText" data-l10n-id="password_label">Enter the password to open this PDF file:</p>
             </div>
@@ -335,8 +335,8 @@ http://sourceforge.net/adobe/cmap/wiki/License/
             </div>
           </div>
         </div>
-        <div id="documentPropertiesContainer" class="hidden">
-          <div class="doorHanger">
+        <div id="documentPropertiesOverlay" class="container hidden">
+          <div class="dialog">
             <div class="row">
               <span data-l10n-id="document_properties_file_name">File name:</span> <p id="fileNameField">-</p>
             </div>
@@ -376,7 +376,7 @@ http://sourceforge.net/adobe/cmap/wiki/License/
               <span data-l10n-id="document_properties_page_count">Page Count:</span> <p id="pageCountField">-</p>
             </div>
             <div class="buttonRow">
-	          <button id="documentPropertiesClose" class="overlayButton"><span data-l10n-id="document_properties_close">Close</span></button>
+              <button id="documentPropertiesClose" class="overlayButton"><span data-l10n-id="document_properties_close">Close</span></button>
             </div>
           </div>
         </div>
