--- a/web/viewer.html
+++ b/web/viewer.html
@@ -39,25 +39,25 @@ http://sourceforge.net/adobe/cmap/wiki/License/
 <!--#endif-->
 
 <!--#if !(FIREFOX || MOZCENTRAL || CHROME || MINIFIED)-->
-    <script type="text/javascript" src="compatibility.js"></script>
+    <script src="compatibility.js"></script>
 <!--#endif-->
 
 <!--#if !PRODUCTION-->
-    <script type="text/javascript" src="../external/webL10n/l10n.js"></script>
+    <script src="../external/webL10n/l10n.js"></script>
 <!--#endif-->
 
 <!--#if !PRODUCTION-->
-    <script type="text/javascript" src="../src/shared/util.js"></script>
-    <script type="text/javascript" src="../src/shared/colorspace.js"></script>
-    <script type="text/javascript" src="../src/shared/function.js"></script>
-    <script type="text/javascript" src="../src/shared/annotation.js"></script>
-    <script type="text/javascript" src="../src/display/api.js"></script>
-    <script type="text/javascript" src="../src/display/metadata.js"></script>
-    <script type="text/javascript" src="../src/display/canvas.js"></script>
-    <script type="text/javascript" src="../src/display/webgl.js"></script>
-    <script type="text/javascript" src="../src/display/pattern_helper.js"></script>
-    <script type="text/javascript" src="../src/display/font_loader.js"></script>
-    <script type="text/javascript">PDFJS.workerSrc = '../src/worker_loader.js';</script>
+    <script src="../src/shared/util.js"></script>
+    <script src="../src/shared/colorspace.js"></script>
+    <script src="../src/shared/function.js"></script>
+    <script src="../src/shared/annotation.js"></script>
+    <script src="../src/display/api.js"></script>
+    <script src="../src/display/metadata.js"></script>
+    <script src="../src/display/canvas.js"></script>
+    <script src="../src/display/webgl.js"></script>
+    <script src="../src/display/pattern_helper.js"></script>
+    <script src="../src/display/font_loader.js"></script>
+    <script>PDFJS.workerSrc = '../src/worker_loader.js';</script>
 <!--#endif-->
 
 <!--#if (GENERIC && !MINIFIED) -->
@@ -65,30 +65,30 @@ http://sourceforge.net/adobe/cmap/wiki/License/
 <!--#endif-->
 
 <!--#if !PRODUCTION-->
-    <script type="text/javascript" src="ui_utils.js"></script>
-    <script type="text/javascript" src="default_preferences.js"></script>
-    <script type="text/javascript" src="preferences.js"></script>
-    <script type="text/javascript" src="download_manager.js"></script>
-    <script type="text/javascript" src="view_history.js"></script>
-    <script type="text/javascript" src="page_view.js"></script>
-    <script type="text/javascript" src="thumbnail_view.js"></script>
-    <script type="text/javascript" src="text_layer_builder.js"></script>
-    <script type="text/javascript" src="document_outline_view.js"></script>
-    <script type="text/javascript" src="document_attachments_view.js"></script>
-    <script type="text/javascript" src="pdf_find_bar.js"></script>
-    <script type="text/javascript" src="pdf_find_controller.js"></script>
-    <script type="text/javascript" src="pdf_history.js"></script>
-    <script type="text/javascript" src="secondary_toolbar.js"></script>
-    <script type="text/javascript" src="password_prompt.js"></script>
-    <script type="text/javascript" src="presentation_mode.js"></script>
-    <script type="text/javascript" src="grab_to_pan.js"></script>
-    <script type="text/javascript" src="hand_tool.js"></script>
-    <script type="text/javascript" src="document_properties.js"></script>
+    <script src="ui_utils.js"></script>
+    <script src="default_preferences.js"></script>
+    <script src="preferences.js"></script>
+    <script src="download_manager.js"></script>
+    <script src="view_history.js"></script>
+    <script src="page_view.js"></script>
+    <script src="thumbnail_view.js"></script>
+    <script src="text_layer_builder.js"></script>
+    <script src="document_outline_view.js"></script>
+    <script src="document_attachments_view.js"></script>
+    <script src="pdf_find_bar.js"></script>
+    <script src="pdf_find_controller.js"></script>
+    <script src="pdf_history.js"></script>
+    <script src="secondary_toolbar.js"></script>
+    <script src="password_prompt.js"></script>
+    <script src="presentation_mode.js"></script>
+    <script src="grab_to_pan.js"></script>
+    <script src="hand_tool.js"></script>
+    <script src="document_properties.js"></script>
 <!--#endif-->
 
 <!--#if !MINIFIED -->
-    <script type="text/javascript" src="debugger.js"></script>
-    <script type="text/javascript" src="viewer.js"></script>
+    <script src="debugger.js"></script>
+    <script src="viewer.js"></script>
 <!--#else-->
 <!--#include viewer-snippet-minified.html-->
 <!--#endif-->
