--- a/test/font/font_test.html
+++ b/test/font/font_test.html
@@ -22,7 +22,7 @@
   <script src="../../src/display/webgl.js"></script>
   <script src="../../src/core/obj.js"></script>
   <script src="../../src/shared/annotation.js"></script>
-  <script src="../../src/shared/function.js"></script>
+  <script src="../../src/core/function.js"></script>
   <script src="../../src/core/charsets.js"></script>
   <script src="../../src/core/cidmaps.js"></script>
   <script src="../../src/core/colorspace.js"></script>
