--- a/web/viewer.html
+++ b/web/viewer.html
@@ -96,8 +96,8 @@ http://sourceforge.net/adobe/cmap/wiki/License/
 
   </head>
 
-  <body tabindex="1">
-    <div id="outerContainer" class="loadingInProgress">
+  <body tabindex="1" class="loadingInProgress">
+    <div id="outerContainer">
 
       <div id="sidebarContainer">
         <div id="toolbarSidebar">
