--- a/web/viewer.html
+++ b/web/viewer.html
@@ -69,6 +69,7 @@ http://sourceforge.net/adobe/cmap/wiki/License/
     <script src="download_manager.js"></script>
     <script src="view_history.js"></script>
     <script src="page_view.js"></script>
+    <script src="pdf_viewer.js"></script>
     <script src="thumbnail_view.js"></script>
     <script src="text_layer_builder.js"></script>
     <script src="document_outline_view.js"></script>
