--- a/web/viewer.html
+++ b/web/viewer.html
@@ -71,6 +71,7 @@ http://sourceforge.net/adobe/cmap/wiki/License/
     <script src="pdf_rendering_queue.js"></script>
     <script src="pdf_page_view.js"></script>
     <script src="text_layer_builder.js"></script>
+    <script src="annotations_layer_builder.js"></script>
     <script src="pdf_viewer.js"></script>
     <script src="thumbnail_view.js"></script>
     <script src="document_outline_view.js"></script>
