Move text_layer_builder and pdf_viewer styles out

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -300,7 +300,7 @@ http://sourceforge.net/adobe/cmap/wiki/License/
         </menu>
 
         <div id="viewerContainer" tabindex="0">
-          <div id="viewer"></div>
+          <div id="viewer" class="pdfViewer"></div>
         </div>
 
         <div id="errorWrapper" hidden='true'>
