Packages PDFViewer as a UI component.

--- a/examples/learning/helloworld.html
+++ b/examples/learning/helloworld.html
@@ -31,7 +31,7 @@
 
   //
   // If pdf.js must be execute via eval or pdf.worker.js is located at the
-  // different location that pdf.js, specify workerSrc.
+  // different location than pdf.js, specify workerSrc.
   //
   // PDFJS.workerSrc = '../../build/pdf.worker.js';
 
