Fixes examples comments.

--- a/examples/learning/prevnext.html
+++ b/examples/learning/prevnext.html
@@ -40,8 +40,9 @@
   // PDFJS.disableWorker = true;
 
   //
-  // If pdf.js must be execute via eval or pdf.worker.js is located at the
-  // different location than pdf.js, specify workerSrc.
+  // In cases when the pdf.worker.js is located at the different folder than the
+  // pdf.js's one, or the pdf.js is executed via eval(), the workerSrc property
+  // shall be specified.
   //
   // PDFJS.workerSrc = '../../build/pdf.worker.js';
 
