--- a/web/viewer.html
+++ b/web/viewer.html
@@ -73,7 +73,7 @@ http://sourceforge.net/adobe/cmap/wiki/License/
     <script src="text_layer_builder.js"></script>
     <script src="annotations_layer_builder.js"></script>
     <script src="pdf_viewer.js"></script>
-    <script src="thumbnail_view.js"></script>
+    <script src="pdf_thumbnail_view.js"></script>
     <script src="pdf_thumbnail_viewer.js"></script>
     <script src="document_outline_view.js"></script>
     <script src="document_attachments_view.js"></script>
