--- a/web/viewer.html
+++ b/web/viewer.html
@@ -76,7 +76,7 @@ http://sourceforge.net/adobe/cmap/wiki/License/
     <script src="pdf_thumbnail_view.js"></script>
     <script src="pdf_thumbnail_viewer.js"></script>
     <script src="pdf_outline_view.js"></script>
-    <script src="document_attachments_view.js"></script>
+    <script src="pdf_attachment_view.js"></script>
     <script src="pdf_find_bar.js"></script>
     <script src="pdf_find_controller.js"></script>
     <script src="pdf_history.js"></script>
