--- a/web/viewer.html
+++ b/web/viewer.html
@@ -239,7 +239,6 @@ http://sourceforge.net/adobe/cmap/wiki/License/
                 <button id="download" class="toolbarButton download hiddenMediumView" title="Download" tabindex="34" data-l10n-id="download">
                   <span data-l10n-id="download_label">Download</span>
                 </button>
-                <!-- <div class="toolbarButtonSpacer"></div> -->
                 <a href="#" id="viewBookmark" class="toolbarButton bookmark hiddenSmallView" title="Current view (copy or open in new window)" tabindex="35" data-l10n-id="bookmark">
                   <span data-l10n-id="bookmark_label">Current View</span>
                 </a>
@@ -391,6 +390,6 @@ http://sourceforge.net/adobe/cmap/wiki/License/
     <div id="printContainer"></div>
 <!--#if !(FIREFOX || MOZCENTRAL)-->
 <!--#include viewer-snippet-mozPrintCallback-polyfill.html-->
-<!--#endif--->
+<!--#endif-->
   </body>
 </html>
