Refactor test driver to be more class-like
- Extract NullTextLayerBuilder and SimpleTextLayerBuilder from the driver code and create classes for them.
- Move options to the constructor and pass in HTML elements instead of getting them in the driver.
- Remove unused masterMode variable.
- Minor method name updates.

The rest is only moving/indenting existing code and adding 'this'.

--- a/test/test_slave.html
+++ b/test/test_slave.html
@@ -34,7 +34,11 @@ limitations under the License.
     <div id="end"></div>
   </body>
   <script>
-    PDFJS.workerSrc = '../src/worker_loader.js';
-    load();
+    var driver = new Driver({
+      output: document.getElementById('output'),
+      inflight: document.getElementById('inflight'),
+      end: document.getElementById('end')
+    });
+    driver.run();
   </script>
 </html>
