--- a/extensions/chromium/pdfHandler.html
+++ b/extensions/chromium/pdfHandler.html
@@ -22,3 +22,4 @@ limitations under the License.
 <script src="pdfHandler-v2.js"></script>
 <script src="pdfHandler-vcros.js"></script>
 <script src="pageAction/background.js"></script>
+<script src="suppress-update.js"></script>
