Move text layer building logic into src/display/text_layer.js

--- a/examples/acroforms/index.html
+++ b/examples/acroforms/index.html
@@ -13,6 +13,7 @@
   <script src="../../src/display/font_loader.js"></script>
   <script src="../../src/display/dom_utils.js"></script>
   <script src="../../src/display/annotation_helper.js"></script>
+  <script src="../../src/display/text_layer.js"></script>
 
   <script>
     // Specify the main script used to create a new PDF.JS web worker.
