--- a/test/unit/unit_test.html
+++ b/test/unit/unit_test.html
@@ -38,6 +38,7 @@
   <script src="../../src/display/font_loader.js"></script>
   <script src="../../src/display/dom_utils.js"></script>
   <script src="../../src/display/annotation_helper.js"></script>
+  <script src="../../src/display/text_layer.js"></script>
   <script src="../../src/core/stream.js"></script>
   <script src="../../src/core/worker.js"></script>
   <script src="../../src/display/metadata.js"></script>
