Localization of the print dialog.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -364,14 +364,14 @@ See https://github.com/adobe-type-tools/cmap-resources
         <div id="printServiceOverlay" class="container hidden">
           <div class="dialog">
             <div class="row">
-              <span>Preparing document for printing...</span>
+              <span data-l10n-id="print_progress_message">Preparing document for printing…</span>
             </div>
             <div class="row">
               <progress value="0" max="100"></progress>
-              <span class="relative-progress">0%</span>
+              <span data-l10n-id="print_progress_percent" data-l10n-args='{ "progress": 0 }' class="relative-progress">0%</span>
             </div>
             <div class="buttonRow">
-              <button id="printCancel" class="overlayButton"><span>Cancel</span></button>
+              <button id="printCancel" class="overlayButton"><span data-l10n-id="print_progress_close">Cancel</span></button>
             </div>
           </div>
         </div>
